--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
             <a href="https://wa.me/+919861045563">
 	Click Me ;)
             </button>
-            <button>
             	<a href="https://github.com/hk4crprasad">
-            My web design
+          <button>My web design</button>
             </a>
-            </button>
-            
             <h3>It sir</h>
             <button>
             	
